man_MANS = stellarium.1
pkgdatadir = $(datadir)/@PACKAGE@/data
pkgdata_DATA = icon.bmp stellarium.ico landscapes.ini ssystem.ini name.fab \
		stars0.cat stars1.cat stars2.cat stars3.cat \
		stars_hip_component_ids.cat stars_hip_sp.cat zone.tab \
		cities.fab DejaVuSans.ttf double_txt.dat variable_txt.dat \
		default_config.ini DejaVuSansMono.ttf \
		constellations_boundaries.dat fontmap.dat iso639-1.utf8
EXTRA_DIST = $(pkgdata_DATA) $(man_MANS)
SUBDIRS = scripts
