# Exclude from standard package
#ADD_SUBDIRECTORY( armintxe_cave ) 
ADD_SUBDIRECTORY( guereins ) 
ADD_SUBDIRECTORY( trees ) 
ADD_SUBDIRECTORY( moon ) 
ADD_SUBDIRECTORY( hurricane ) 
ADD_SUBDIRECTORY( ocean ) 
ADD_SUBDIRECTORY( garching ) 
ADD_SUBDIRECTORY( mars ) 
ADD_SUBDIRECTORY( jupiter ) 
ADD_SUBDIRECTORY( saturn ) 
ADD_SUBDIRECTORY( uranus ) 
ADD_SUBDIRECTORY( neptune ) 
ADD_SUBDIRECTORY( grossmugl ) 
ADD_SUBDIRECTORY( geneva ) 
ADD_SUBDIRECTORY( zero ) 
ADD_SUBDIRECTORY( sun ) 
