IF(WIN32 AND NOT MSVC)
     STRING(APPEND CMAKE_EXE_LINKER_FLAGS " -Wl,--enable-runtime-pseudo-reloc")
ENDIF()

IF (STELLARIUM_GUI_MODE STREQUAL "None")
     ADD_DEFINITIONS(-DNO_GUI)
ENDIF()

ADD_DEFINITIONS(
	-DQT_PLUGIN
	-DQT_STATICPLUGIN
	-DQT_DLL
	-D_REENTRANT
)

SET_SOURCE_FILES_PROPERTIES( "${CMAKE_CURRENT_BINARY_DIR}/AllStaticPlugins.cpp" PROPERTIES
	GENERATED TRUE
)

ADD_LIBRARY( AllStaticPlugins OBJECT
	"${CMAKE_CURRENT_BINARY_DIR}/AllStaticPlugins.cpp"
)

TARGET_LINK_LIBRARIES( AllStaticPlugins PUBLIC
	Qt${QT_VERSION_MAJOR}::Core
)

SET( AllStaticPluginsCode "#include <QtPlugin>\n")

FOREACH(NAME IN LISTS STELLARIUM_PLUGINS)
	STRING( TOUPPER ${NAME} NAME_UP )

	ADD_SUBDIRECTORY( ${NAME} )
	
	STRING(APPEND AllStaticPluginsCode "#ifdef USE_STATIC_PLUGIN_${NAME_UP}\nQ_IMPORT_PLUGIN(${NAME}StelPluginInterface)\n#endif\n" )

	TARGET_LINK_LIBRARIES(AllStaticPlugins PUBLIC
		${NAME}-static
	)
ENDFOREACH()

FILE(GENERATE
	OUTPUT  "${CMAKE_CURRENT_BINARY_DIR}/AllStaticPlugins.cpp"
	CONTENT "${AllStaticPluginsCode}"
)
